frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
/* ... */
.card-label-smaller {
  @apply w-1/3;
  margin-bottom: revert;
}

.card-label-APK {
  @apply w-1/3;
  margin-bottom: revert;
  width: 100%;
}

.underline {
  border-color: #e7e6e6;
  @apply mb-sm;
}

.box-shadow-none {
  box-shadow: none;
}

.component-in-front {
  @apply flex justify-center items-center;
}

.subform-composer {
  @apply flex;
}

.form-search-wrapper {
  flex: 1;
  min-width: 0;
  display: flex;
  flex-direction: column;
}

.result {
  display: flex;
  flex-direction: column;
  overflow-x: scroll;
  border-radius: 12px;
  flex: 1 1 0%;
  scrollbar-width: none;
}

/* Chrome, Edge, Safari */
.result::-webkit-scrollbar:horizontal {
  display: none;
}

.inbox-search-container {
  .result {
    @apply mt-lg;
  }
}

.payment-form-text-input-correction {
  width: 100% !important;
}

.edcr-citizen-inbox {
  thead th:first-child {
    min-width: 155px;
  }
}

.error-boundary {
  width: 100vw;
  height: 100vh;
  font-size: 16px;
  font-family: sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  .error-container {
    display: flex;
    width: 400px;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    h1 {
      font-size: 32px;
      font-weight: bold;
    }

    button {
      height: 40px;
      width: 153px;
      border-radius: 0px;
      padding: 8px 24px;
      color: white;
      cursor: pointer;
      background-color: theme(colors.primary.main);
    }
  }
}

.error-boundary summary,
.error-boundary details {
  width: 300px;
  background-color: rgb(218, 100, 100);
  margin: 5px;
  border: 2px solid #222;
  border-radius: 3px;
  padding: 3px;
}

.full-width-card {
  width: 92vw !important;
}

.full-employee-card-link {
  width: 100% !important;
  margin: 7px 0px;

  a {
    color: inherit;
    text-decoration: inherit;
  }
}

.full-employee-card-height {
  height: unset !important;
}

@media (min-width: 640px) {
  .full-employee-card-height {
    height: 196px !important;
  }

  .full-employee-card-link {
    width: 30% !important;
  }

  .full-width-card {
    @apply w-full !important;
  }
}

.applications-list-container {
}

.complaint-summary {
  @media (min-width: 780px) {
    flex: 1 0 auto;
    margin-left: 1rem;
    margin-top: 1rem;
  }
}

@media (min-width: 780px) {
  .citizen-form-wrapper {
    width: calc(100% - 219px);
    display: flex;
    justify-content: center;
    margin-top: 1rem;
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media (min-width: 780px) {
  .citizen-card-container {
    padding-left: 15px;
    padding-right: 15px;
    margin-top: 1rem;
  }
}

@media (min-width: 780px) {
  .citizen-obps-wrapper,
  .pgr-citizen-wrapper,
  .pt-citizen,
  .bill-citizen,
  .bills-citizen-wrapper,
  .payer-bills-citizen-wrapper,
  .engagement-citizen-wrapper,
  .citizen-all-services-wrapper,
  .mcollect-citizen,
  .ws-citizen-wrapper,
  .tl-citizen {
    width: calc(100% - 219px);
    padding-left: 16px;
    padding-right: 16px;
    margin-top: 1rem;
  }

  .selection-card-wrapper {
    padding-left: 16px;
    padding-right: 16px;
    margin-top: 2rem;
    width: 96%;
  }
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .error-boundary {
    height: 75vh;
  }
}

.app-wrapper {
  width: 100%;
  flex: 1;
  min-width: 0;
}

.employee-app-wrapper {
  min-height: calc(100vh - 8em);
  height: calc(100vh - 102px);
}

.ws-custom-wrapper {
  .submit {
    display: flex !important;
    flex-direction: row-reverse !important;
    width: 100% !important;
    align-items: center;

    button {
      width: 240px !important;
    }

    p {
      width: unset;
      margin-right: 1rem;
    }
  }
}

.ws-search-form {
  display: flex;
  flex-direction: column;
  gap: 20px;

  .ws-search-form-wrapper {
    border-radius: 0;
  }
}

.ws-search-form-wrapper {
  padding: 0;
  overflow-y: scroll;
}

.ws-submit {
  display: flex;
  gap: 16px;
  justify-content: end;
  align-items: center;
}

.plumber-details-new-value-wrapper {
  flex: 2 1 auto;
}

.connection-details-new-value-wrapper {
  flex: 1 1 auto;
}

.connection-details-old-value-wrapper,
.plumber-details-old-value-wrapper {
  flex: 1 1 auto;

  .old-value-null-wrapper {
    visibility: hidden;
    padding-bottom: 8px;
    margin-bottom: 8px;
  }

  .row {
    color: #b1b4b6;
    font-weight: 700;
    font-size: 16px;
  }
}

.plumber-details-new-value-wrapper {
  flex: 2 1 auto;
}

.connection-details-new-value-wrapper {
  flex: 1 1 auto;
}

.connection-details-old-value-wrapper,
.plumber-details-old-value-wrapper {
  flex: 1 1 auto;

  .old-value-null-wrapper {
    visibility: hidden;
    padding-bottom: 8px;
    margin-bottom: 8px;
  }

  .row {
    color: #b1b4b6;
    font-weight: 700;
    font-size: 16px;
  }
}

.modal-header-ws {
  padding: 1rem;
  font-weight: 400;
}

.modal-body-ws {
  padding: 1rem;
  font-weight: 700;
  color: theme(colors.text.primary);
  font-size: 24px;
  margin-bottom: 1rem;
}

.privacy-icon {
  cursor: pointer;
}

.privacy-icon:hover {
  path {
    fill: rgba(244, 119, 56, 1);
  }
}

.privacy-icon-2 {
  cursor: pointer;
}

.privacy-icon-2:hover {
  path {
    fill: none;
  }
}

.audit-card {
  width: 80%;
  margin-left: -260px;
  margin-right: -27%;
  max-height: 120px;
  margin-top: 90px;
}

.flex-box {
  display: flex;
  width: 100%;
  height: 100%;
}

.flex-box-center {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.flex-box-col {
  flex-direction: column;
}

.flex-box-content-between {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 100%;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.flex-gap-1 {
  gap: 4px;
}

.flex-gap-2 {
  gap: 8px;
}

.flex-gap-3 {
  gap: 12px;
}

.flex-gap-4 {
  gap: 16px;
}

.flex-gap-5 {
  gap: 20px;
}

.bc-white {
  background-color: #fff;
}

.round-medium {
  border-radius: 6px;
}

